cmake_minimum_required(VERSION 3.17)
project(DpdkSendPackets)
set(CMAKE_CXX_STANDARD 17)

set(PCAPPLUSPLUS_HOME /usr/local/include/pcapplusplus)
set(RTE_SDK lib/rte_ring_lib)

set(PCAPPP_INCLUDES
        ${PCAPPLUSPLUS_HOME}
        /usr/include/netinet
        ${RTE_SDK})
set(PCAPPP_LIBS_DIR
        /usr/local/lib
        ${RTE_SDK})

include_directories(${PCAPPP_INCLUDES})
link_directories(${PCAPPP_LIBS_DIR})

add_subdirectory(${RTE_SDK})

set(CXXFLAGS
        -O2
        -g
        -Wall)

set(PCAPPP_BUILD_FLAGS
        -fPIC
        -DPCAPPP_CPP_FEATURE_DETECTION
        -std=c++17
        ${CXXFLAGS}
        -msse
        -msse2
        -msse3
        -Wall)

add_compile_options(${PCAPPP_BUILD_FLAGS})

set(DPDKLIBS
        -Wl,--whole-archive
        rte_acl
        rte_bbdev
        rte_bitratestats
        rte_bpf
        rte_bus_dpaa
        rte_bus_fslmc
        rte_bus_ifpga
        rte_bus_pci
        rte_bus_vdev
        rte_bus_vmbus
        rte_cfgfile
        rte_cmdline
        rte_common_cpt
        rte_common_dpaax
        rte_common_octeontx
        rte_compressdev
        rte_cryptodev
        rte_distributor
        rte_eal
        rte_efd
        rte_ethdev
        rte_eventdev
        rte_flow_classify
        rte_gro
        rte_gso
        rte_hash
        rte_ip_frag
        rte_jobstats
        rte_kni
        rte_kvargs
        rte_latencystats
        rte_lpm
        rte_mbuf
        rte_member
        rte_mempool
        rte_mempool_bucket
        rte_mempool_dpaa2
        rte_mempool_dpaa
        rte_mempool_octeontx
        rte_mempool_ring
        rte_mempool_stack
        rte_meter
        rte_metrics
        rte_net
        rte_pci
        rte_pdump
        rte_pipeline
        rte_pmd_af_packet
        rte_pmd_ark
        rte_pmd_atlantic
        rte_pmd_avf
        rte_pmd_avp
        rte_pmd_axgbe
        rte_pmd_bbdev_null
        rte_pmd_bnxt
        rte_pmd_bond
        rte_pmd_caam_jr
        rte_pmd_crypto_scheduler
        rte_pmd_cxgbe
        rte_pmd_dpaa2
        rte_pmd_dpaa2_cmdif
        rte_pmd_dpaa2_event
        rte_pmd_dpaa2_qdma
        rte_pmd_dpaa2_sec
        rte_pmd_dpaa
        rte_pmd_dpaa_event
        rte_pmd_dpaa_sec
        rte_pmd_dsw_event
        rte_pmd_e1000
        rte_pmd_ena
        rte_pmd_enetc
        rte_pmd_enic
        rte_pmd_failsafe
        rte_pmd_fm10k
        rte_pmd_i40e
        rte_pmd_ifc
        rte_pmd_ifpga_rawdev
        rte_pmd_ixgbe
        rte_pmd_kni
        rte_pmd_lio
        rte_pmd_netvsc
        rte_pmd_nfp
        rte_pmd_null
        rte_pmd_null_crypto
        rte_pmd_octeontx
        rte_pmd_octeontx_crypto
        rte_pmd_octeontx_ssovf
        rte_pmd_octeontx_zip
        rte_pmd_opdl_event
        rte_pmd_qat
        rte_pmd_qede
        rte_pmd_ring
        rte_pmd_sfc_efx
        rte_pmd_skeleton_event
        rte_pmd_skeleton_rawdev
        rte_pmd_softnic
        rte_pmd_sw_event
        rte_pmd_tap
        rte_pmd_thunderx_nicvf
        rte_pmd_vdev_netvsc
        rte_pmd_vhost
        rte_pmd_virtio
        rte_pmd_virtio_crypto
        rte_pmd_vmxnet3_uio
        rte_port
        rte_power
        rte_rawdev
        rte_reorder
        rte_ring
        rte_sched
        rte_security
        rte_table
        rte_timer
        rte_vhost
        -Wl,--no-whole-archive)
link_libraries(${DPDKLIBS})

add_executable(DpdkSendPackets
        main.cpp)

target_link_libraries(DpdkSendPackets
        libPcap++.a
        libPacket++.a
        libCommon++.a
        pcap
        pthread
        )